--- a/FlappyBirdHTML.html
+++ b/FlappyBirdHTML.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <link rel = "stylesheet" type = "text/css" href = "./style.css"/>
+        <script src = "FlappyBirdScript1.js"></script>
 
 
         <title>Flappy Bird game 1</title>
@@ -11,8 +12,9 @@
         <div id = "topBorder"></div>
         <div id = "player"></div>
         <div id = "bottomBorder"></div>
+        <button id = "startbutton" onclick = "rungame()">press here to start.</button>
+        <div id = scores></div>
     </body>
-    <script src = "FlappyBirdScript1.js"></script>
 
 
 
