--- a/FlappyBirdHTML.html
+++ b/FlappyBirdHTML.html
@@ -2,8 +2,7 @@
 
 <html>
     <head>
-        <link rel = "stylesheet" type = "text/css" href = "./style.css"/>
-        <script src = "FlappyBirdScript1.js"></script>
+        <link rel = "stylesheet" type = "text/css" href = "./FlappyBirdstyle.css"/>
 
 
         <title>Flappy Bird game 1</title>
@@ -12,9 +11,12 @@
         <div id = "topBorder"></div>
         <div id = "player"></div>
         <div id = "bottomBorder"></div>
-        <button id = "startbutton" onclick = "rungame()">press here to start.</button>
+
         <div id = scores></div>
+        <a id = "startbutton" href = "./FlappyBirdHTML.html"><button> click to restart </button> </a>
+        <h2 id = "failmessage"></h2>
     </body>
+    <script src = "FlappyBirdScript1.js"></script>
 
 
 
