--- a/home.html
+++ b/home.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title> Juni's Flappy Bird Game </title>
+        <link rel = "stylesheet" type = "text/css" href = "./homeCSS.css"/>
     </head>
     <body>
-
+        <h1> Welcome to Juni's Flappy Bird Game! </h1>
+        <img src = "./FlappyBirdPic.jpeg"/><br>
+        <a href = "./FlappyBirdHTML.html"> <button> click here to begin! </button> </a>
     </body>
 </html>
