--- a/home.html
+++ b/home.html
@@ -7,6 +7,16 @@
     <body>
         <h1> Welcome to Juni's Flappy Bird Game! </h1>
         <img src = "./FlappyBirdPic.jpeg"/><br>
+
+
+        <p>
+            Instructions :
+
+            Use the w key, space key, or click to move the player up. <br>
+            If you are on a mobile phone, tap to move up, making sure to use <br>
+            light taps.
+
+        </p><br>
         <a href = "./FlappyBirdHTML.html"> <button> click here to begin! </button> </a>
     </body>
 </html>
