--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
             light taps.
 
         </p><br>
-        <a href = "./FlappyBirdHTML.html"> <button> click here to begin! </button> </a>
+
+        <a href = "./FlappyBirdHTML.html"> <button> click here to begin! </button> </a> <br>
     </body>
 </html>
