--- a/FlappyBirdHTML.html
+++ b/FlappyBirdHTML.html
@@ -9,7 +9,9 @@
     </head>
     <body> </body>
     <script src = "FlappyBirdScript1.js"></script>
-    <script> startgame(3000); </script>
+    <script>
+    startgame(sessionStorage.getItem("diff"));
+    </script>
 
 
 </html>
