--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 
             Use the w key, space key, or click to move the player up. <br>
             If you are on a mobile phone, tap to move up, making sure to use <br>
-            light taps.
+            light taps. Use the r key or the restart button to restart.
 
         </p><br>
         <h3> choose difficulty below : </h3><br>
